2006-05-04  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog: fix whitespace.

2006-05-04  Nathaniel Smith  <njs@pobox.com>

	* cmd_files.cc (annotate): Check whether file exists.
	* tests/t_annotate.at: Test this check.

2006-05-04  Matt Johnston  <matt@ucc.asn.au>

	* work.cc (editable_working_tree::apply_delta): filename argument
	was missing for E() format string.

2006-05-02  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A few new strings to translate.

2006-05-02  Matthew Nicholson  <matt@matt-land.com>

	* monotone.texi (Composite selectors): Added note about escaping in
	selectors.

2006-05-02  Richard Levitte  <richard@levitte.org>

	* commands.cc (commands::complete_command): Make sure to catch the
	case of a unknown command, and treat it as a naughty.

2006-05-01  Nathaniel Smith  <njs@pobox.com>

	* cmd_merging.cc (update): Hopefully clarify messages in the
	different cases where target branch differs from current branch.
	* tests/t_update_off_branch.at: Test all paths.
	* ui.cc (warn): Use prefix_lines_with and mark "warning:" for
	translation.

2006-05-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/terminal.cc (have_smart_terminal): Simplify smart terminal
	detection, since it doesn't really work anyway.  We'll now default
	to smart almost everywhere (except inside environments with
	TERM=dumb or TERM=emacs).  Users can override this with
	--ticker=(dot|none) if need be.

	* win32/fs.cc (get_current_working_dir): Strip trailing backslash
	from path, if present.  Fixes bug #16442.

2006-05-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc: "automate common_ancestors" was committed accidentally.
	Comment it out until tests/documentation are ready.

2006-04-30  Graydon Hoare  <graydon@pobox.com>

	* xdelta.{cc,hh} (invert_xdelta): New function.
	* database.{cc,hh} (database::get_arbitrary_file_delta): Add.
	(database::put_file_version): Use invert_xdelta.
	* netsync.cc (session::note_file_delta): 
	Use get_arbitrary_file_delta.
