@@ -1,3 +1,8 @@
+2006-05-05  Nathaniel Smith  <njs@pobox.com>
+
+	* database.cc (info): Include count of total nodes allocated in
+	this db in 'db info' output.
+
 2006-05-04  Nathaniel Smith  <njs@pobox.com>
 
 	* ChangeLog: fix whitespace.
